--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,11 @@ bench = false
 
 [dependencies]
 arbitrary = { version = "1.0", optional = true, default-features = false }
-gc = { version = "0.4.1", optional = true, default-features = false }
+# gc = { version = "0.4.1", optional = true, default-features = false }
+# gc = { git = "https://github.com/manishearth/rust-gc", rev = "6c5f754", optional = true, default-features = false }
+# gc = { path = "../rust-gc/gc", optional = true, default-features = false }
+gc = { git = "https://github.com/helixbass/rust-gc", rev = "2214d68", optional = true, default-features = false }
+
 quickcheck = { version = "1.0", optional = true, default-features = false }
 serde = { version = "1.0", optional = true, default-features = false }
 rayon = { version = "1.5.3", optional = true }
